--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/vue": "^2.1.3",
     "autoprefixer": "^10.4.20",
     "bootstrap": "^5.3.3",
+    "canvas-confetti": "^1.9.3",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
     "vue": "^3.4.27",
